@@ -238,6 +238,9 @@
         if (!date) {
             return '';
         }
+        if (!date.isValid()) {
+            return date.invalid_value;
+        }
         return date.format(Sao.common.moment_format(format));
     };
 
@@ -253,26 +256,31 @@
                     return number;
                 }
             }
-            return 0;
+            return undefined;
         };
         return Sao.Time(getNumber('%H'), getNumber('%M'), getNumber('%S'),
-                getNumber('%f'));
+                getNumber('%f'), value);
     };
 
     Sao.common.format_date = function(date_format, date) {
         if (!date) {
             return '';
         }
+        if (!date.isValid()) {
+            return date.invalid_value;
+        }
         return date.format(Sao.common.moment_format(date_format));
     };
 
     Sao.common.parse_date = function(date_format, value) {
-        var date = moment(value,
-               Sao.common.moment_format(date_format));
+        if (!value) {
+            return null;
+        }
+        var date = moment(value, Sao.common.moment_format(date_format));
         if (date.isValid()) {
             date = Sao.Date(date.year(), date.month(), date.date());
         } else {
-            date = null;
+            date = Sao.Date(undefined, undefined, undefined, false, value);
         }
         return date;
     };
@@ -281,17 +289,25 @@
         if (!date) {
             return '';
         }
+        if (!date.isValid()) {
+            return date.invalid_value;
+        }
         return date.format(Sao.common.moment_format(datetime_format));
     };
 
     Sao.common.parse_datetime = function(datetime_format, value) {
+        if (!value) {
+            return null;
+        }
         var date = moment(value, Sao.common.moment_format(datetime_format));
         if (date.isValid()) {
             date = Sao.DateTime(date.year(), date.month(), date.date(),
                     date.hour(), date.minute(), date.second(),
                     date.millisecond());
         } else {
-            date = null;
+            date = Sao.DateTime(undefined, undefined, undefined,
+                undefined, undefined, undefined, undefined,
+                false, false, value);
         }
         return date;
     };
