@@ -1,3 +1,5 @@
+* Don't reset date/datetime/time to None when it is invalid
+
 Version 6.4.8 - 2022-12-06
 --------------------------
 * Bug fixes (see mercurial logs for details)
